# rust_toggle

./: Cargo.toml  README.md
.github/workflows/: build.yaml
src/: client.rs  commands.rs  config.rs  main.rs  toggle.rs
