[package]
name = "tgl"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.34"
clap = { version = "4.5.1", features = ["derive"] }
confy = "0.6.0"
reqwest = { version = "0.11.24", features = ["blocking", "json"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.114"
structopt = "0.3.26"
